# Devs-Mentoring-Students-Projects

Backend Projects/education-platform-for-pythoneers/: .coveragerc  .gitignore  .travis.yml  README.MD  docker-compose.yml  manage.py  pylintrc  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_docker.py
Backend Projects/education-platform-for-pythoneers/education_platform_for_pythoneers/: __init__.py  asgi.py  settings.py  settings_docker.py  urls.py  wsgi.py
Backend Projects/education-platform-for-pythoneers/education_platform_for_pythoneers/tests/: test_settings.py
Backend Projects/education-platform-for-pythoneers/functional_tests/: test_app_functionality.py
Backend Projects/education-platform-for-pythoneers/main_app/: admin.py  models.py  urls.py  views.py
Backend Projects/education-platform-for-pythoneers/main_app/db/: views_operator.py
Backend Projects/education-platform-for-pythoneers/main_app/tests/: test_models.py  test_views.py
Backend Projects/education-platform-for-pythoneers/ranking_app/: admin.py  apps.py  models.py  urls.py  views.py
Backend Projects/education-platform-for-pythoneers/ranking_app/db/: services_operator.py
Backend Projects/education-platform-for-pythoneers/remote_code_execution_app/: apps.py  urls.py  views.py
Backend Projects/education-platform-for-pythoneers/task_statistics_app/: admin.py  apps.py  models.py
Backend Projects/education-platform-for-pythoneers/templates/: layout.html
Backend Projects/education-platform-for-pythoneers/users_app/: admin.py  forms.py  models.py  urls.py  views.py
(+89 files in other folders)
