# coding: utf-8
[metadata]
name = education_platform_for_pythoneers
keywords = learning, python, pythoneer
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Kacper Stysło
author_email = kacper.styslo@gmail.com
description = Education platform with task to learn python.
url = https://github.com/kacperstyslo/education-platform-for-pythoneers
project-urls =
	Code = https://github.com/kacperstyslo/education-platform-for-pythoneers
	Issue tracker = https://github.com/kacperstyslo/education-platform-for-pythoneers/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100
